welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^Program:2: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^Program:2: error: not found: value versLAvant
move(nbPas: Int,versLAvant: Boolean){
                ^Program:5: error: not found: value versLAvent
  versLAvent=true
  ^Program:7: error: not found: value versLAvent
  }else{versLAvent=false
        ^Program:11: error: not found: value versLAvent
  if (versLAvent==true){
      ^