welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
move(nbPas: Int,versLAvant: Boolean){
	
 if (getDirection==Direction.NORTH){
  versLAvent=true
    
  }else{versLAvent=false
  
} 
  
  if (versLAvent==true){
    while(!estFaceMur){
      avance()
    }
  }else{
    while(!estFaceMur){
      recule()
    
  }
}
}